--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <p>Following two steps are followed to detect deadlocks in RAG:</p>
             <br>
             <ol>
-              <li><span>Creating the RAG using the input given by the user:</span></li>
+              <li><span>Create RAG using the input given by the user:</span></li>
               <ul>
                 <li>Enter the number of resources and specify the instances for each resource.</li>
                 <li>Enter the number of processes to be included in RAG.</li>
@@ -163,7 +163,7 @@
                 <li>To add an assignment edge, right-click on a resource icon, then right-click on the process that holds it.</li>
               </ul>
               <br>
-              <li><span>Finding Deadlock in the Given Graph:</span></li><br>
+              <li><span>Find Deadlock in the Given Graph:</span></li><br>
                 <p>Check for the following conditions to find potential deadlock:</p><br>
                 <ol style="list-style-type: upper-roman;">
                   <li><strong>Hold and Wait:</strong> For each process, check if it is holding a resource while requesting same instance or another resource that is currently held. If true, the edge is highlighted in yellow. (toggle 'view hold & wait')</li>
@@ -382,29 +382,73 @@
                 <button class="blue" id="reset-button" onclick="edge_deletion()">Edge Deletion</button>
             </div>
             <div id="Extra_instructions">
-              <h1>Instructions to Use</h1>
-              <p>1.<span class="bolder">Process:</span> Each Process node is represented by (Circles) and is numbered as P1,P2,P3 to Pn if the graph has ‘n’ Processes.</p>
-              <p>2.<span class="bolder">Resource:</span> Each Resource is represented by a (Gray quare box), with some resource-instances in them(orange boxes). A resource should have a minimum of 1 resource-instance. </p>
-              <p>3.<span class="bolder">Resource-Instance:</span> Each Resource-Instance is represented by an orange square box, and are numbered as - R1.1, R1.2, R2.1, R3.1, R3.2, R3.3, ......, R m.n</p>
+              <!-- <h1>Instructions to Use</h1>
+              <p>1.<span class="bolder">Process:</span> Process nodes are represented by blue colored Circles and numbered as P1,P2,P3 to Pn if the graph has ‘n’ Processes.</p>
+              <p>2.<span class="bolder">Resource:</span> Each Resource is represented by a gray colored square box, having some resource-instances in them represented by orange colored squares. A resource should have a minimum of 1 resource-instance. </p>
+              <p>3.<span class="bolder">Resource-Instance:</span> Each Resource-Instance is represented by an orange square box and is numbered as Rm.n where m stands for resource number and n stands for instance number in the resource. e.g. R1.1, R1.2, R2.1, R3.1, R3.3, R5.4</p>
               <p>4.<span class="bolder">Selection:</span> Right-click (long press for mobiles) on  any Process or Resource-Instance to select it, selected item will have (Green boundary). To de-select just right-click (long press for mobiles) again.</p>
               <p>5.<span class="bolder">Drag/Movement:</span> Drag any  Process/Resource in the graph simulation, using left click (simple click for mobiles).</p>
               <p>6.<span class="bolder">Assignment Edge Creation:</span> First right-click (long press for mobiles) on any Resource-Instance and then right-click (long press for mobiles) on any Process. This will create an assignment edge(Blue color) from that Resource-Instance to that Process.(<span class="bolder">Note:</span> a single resource-instance can’t be assigned to two different Processes)</p>
               <p><span class="bolder">Note: Use Long Press for Right-click on mobile devices.</span></p>
               <p>7.<span class="bolder">Requesting Edge Creation:</span> First right-click (long press for mobiles) on any Process and then right-click (long press for mobiles) on any Resource-Instance, this will create a Requesting edge from that Process to that Resource-Instance.(<span class="bolder">Note:</span> a single Process can’t  request two different Resource-Instances of a single Resource)</p>
               <p>8.<span class="bolder">Assignment/Requesting Edge deletion:</span> whether it is Assignment or requesting edge, to delete it  right click (long press for mobiles) on its tail Process/Resource-Instance and then right-click (long press for mobiles) on its head Process/resource-Instance.</p>
-            
+             -->
+              <!-- <h1>Instructions to Use</h1>
+
+<p>1. <span class="bolder">Process:</span> Process nodes are represented by blue-colored circles and numbered as P1, P2, P3, ..., Pn if the graph has ‘n’ processes.</p>
+
+<p>2. <span class="bolder">Resource:</span> Each resource is represented by a gray-colored square box containing some resource instances, represented by orange-colored squares. A resource must have at least one resource instance.</p>
+
+<p>3. <span class="bolder">Resource Instance:</span> Each resource instance is represented by an orange square box and is numbered as Rm.n, where ‘m’ stands for the resource number and ‘n’ stands for the instance number within that resource. For example: R1.1, R1.2, R2.1, R3.1, R3.3, R5.4.</p>
+
+<p>4. <span class="bolder">Selection:</span> Right-click (or long-press on mobile devices) on any process or resource instance to select it. The selected item will have a green boundary. To deselect, right-click (or long-press) again.</p>
+
+<p>5. <span class="bolder">Drag/Movement:</span> Drag any process or resource in the graph simulation using a left-click (or a simple tap on mobile devices).</p>
+
+<p>6. <span class="bolder">Assignment Edge Creation:</span> First, right-click (or long-press) on any resource instance, and then right-click (or long-press) on any process. This will create an assignment edge of blue color, from that resource instance to the process. (<span class="bolder">Note:</span> A single resource instance cannot be assigned to two different processes.)</p>
+
+<p>7. <span class="bolder">Requesting Edge Creation:</span> First, right-click (or long-press) on any process, and then right-click (or long-press) on any resource instance. This will create a requesting edge of red color, from that process to the resource instance. (<span class="bolder">Note:</span> A single process cannot request two different resource instances of the same resource.)</p>
+
+<p>8. <span class="bolder">Assignment/Requesting Edge Deletion:</span> To delete an edge (whether assignment or requesting), right-click (or long-press) on its tail process/resource instance and then right-click (or long-press) on its head process/resource instance.</p>
+
+<p><span class="bolder">Note:</span> Use <span class="bolder">long-press</span> instead of right-click on mobile devices.</p> -->
+
+              <h1>Instructions to Use</h1>
+
+<p>1. <span class="bolder">Process:</span> Process nodes are represented by blue-colored circles and numbered as P1, P2, P3, ..., Pn if the graph has ‘n’ processes.</p>
+
+<p>2. <span class="bolder">Resource:</span> Each resource is represented by a gray-colored rectangle box containing one or more resource instances, represented by orange-colored rectangles. A resource must have at least one resource instance.</p>
+
+<p>3. <span class="bolder">Resource Instance:</span> Each resource instance is represented by an orange rectangle box and is numbered as Rm.n, where ‘m’ denotes the resource number and ‘n’ denotes the instance number within that resource. For example: R1.1, R1.2, R2.1, R3.1, R3.3, R5.4.</p>
+
+<p>4. <span class="bolder">Selection:</span> Right-click (or long-press on mobile devices) on any process or resource instance to select it. The selected item will have a green boundary. To deselect, right-click (or long-press) again.</p>
+
+<p>5. <span class="bolder">Drag/Movement:</span> Drag any process or resource in the graph simulation using a left-click (or a simple tap on mobile devices).</p>
+
+<p>6. <span class="bolder">Assignment Edge Creation:</span> First, right-click (or long-press) on any resource instance, and then right-click (or long-press) on any process. This will create an assignment edge (blue in color) from that resource instance to the process. (<span class="bolder">Note:</span> A single resource instance cannot be assigned to two different processes.)</p>
+
+<p>7. <span class="bolder">Requesting Edge Creation:</span> First, right-click (or long-press) on any process, and then right-click (or long-press) on any resource instance. This will create a requesting edge (red in color) from that process to the resource instance. (<span class="bolder">Note:</span> A single process cannot request two different resource instances of the same resource.)</p>
+
+<p>8. <span class="bolder">Assignment/Requesting Edge Deletion:</span> To delete an edge (either assignment or requesting), right-click (or long-press) on its tail process/resource instance and then right-click (or long-press) on its head process/resource instance.</p>
+
+<p><span class="bolder">Note:</span> Use <span class="bolder">long-press</span> instead of right-click on mobile devices.</p>
+
               <h1>Button functionalities</h1>
-              <p>All the buttons provided below the graph simulation are used for the following functionalities.</p>
-              <p>Click on any button to use its functionality.</p>
+              <!-- <p>All the buttons provided below the graph simulation are used for the following functionalities.</p> -->
+              <!-- <p>Click on any button to use its functionality.</p> -->
+              <p> Following buttons are provided for 
+graph simulation ( Click on any button to see its functionality)</p>
               <p>1.<span class="bolder">Add Processes:</span> Use to  add “n” number of processes into the  graph.</p>
               <p>2.<span class="bolder">Add Resources:</span> Use to add “r” number of resources with each having minimum “s” number of resource-instances.</p>
               <p>3.<span class="bolder">Add Resource-Instance:</span> Use this button to add 1 more Resource-Instance in any existing resource.</p>
               <p>4.<span class="bolder">View Hold-wait:</span> Activate the Visualisation of Hold-wait condition in the graph. The edges in hold-wait condition will then be highlighted by yellow color.</p>
               <p>5.<span class="bolder">View Circular-wait:</span> Activate the Visualisation of Circular-wait condition in the graph. The edges in circular-wait will then be highlighted by green color.</p>
               <p>6.<span class="bolder">Delete:</span> Activate deletion mode, after this right-click(long press for mobiles) on any Process or Resource-Instance to delete it.</p>
-              <p><span class="bolder">Note:</span> Buttons having activation can be deactivated if  again left-click (simple click for mobiles) on the button.</p>
               <p>7.<span class="bolder">Reset:</span> Make the graph simulation empty or to delete everything.</p>
-              <p>8.<span class="bolder">Edge Creation/ Edge Deletion: </span>Instructions of creating/deleting edges. </p>
+              <p>8.<span class="bolder">Edge Creation/ Edge Deletion: </span>Use to read instructions for creating or deleting edges.</p>
+              <!-- <p><span class="bolder">Note:</span> Buttons having activation can be deactivated if  again left-click (simple click for mobiles) on the button.</p> -->
+              <p><span class="bolder">Note:</span> Buttons having activation can be deactivated if again left-click (simple click for mobiles) on the button. Activated  button is deactivated on left-click (simple click for mobiles).</p>
+
             </div>
             <!-- Extra forms  -->
             <div class="input" id="input_process">
@@ -537,13 +581,13 @@
           <h3>Students</h3>
           <ul class="ref-list">
             <li>
-                <a href="https://github.com/SequencerBit" rel="noopener" target="_blank"><span>Jayesh Raj Neti, 2nd Year, B.Sc(H) Computer Science </span></a>
+                <a href="https://github.com/SequencerBit" rel="noopener" target="_blank"><span>Jayesh Raj Neti, 3rd year (2025-26), B.Sc(H) Computer Science </span></a>
             </li>
             <li>
-              <a href="https://github.com/nitesh4456" rel="noopener" target="_blank"><span>Nitesh Verma, 2nd Year, B.Sc(H) Computer Science</span></a>
+              <a href="https://github.com/nitesh4456" rel="noopener" target="_blank"><span>Nitesh Verma, 3rd year (2025-26), B.Sc(H) Computer Science</span></a>
             </li>
           </ul>
-          <h3>Mentors</h3>
+          <h3>Mentor</h3>
           <ul class="ref-list">
             <li><span>Prof. Sharanjit Kaur, Department of Computer Science</span></li>
           </ul>
