--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="container" id="aim">
         <div class="title">Aim</div>
         <div class="content">
-          <p>The objective of this virtual lab is to provide a comprehensive understanding of Resource Allocation Graphs (RAGs) and their usage for the allocation of resources to processes and to detect potential deadlocks for two conditions (hold-and-wait and circular-wait) through interactive simulation. RAG is explained with respect to its usage in resource allocation to processes maintained by the operating system
+          <p>The objective of this virtual lab is to provide a comprehensive understanding of Resource Allocation Graphs (RAGs) and their usage for the allocation of resources to processes and to detect potential deadlocks for two conditions (hold-and-wait and circular-wait) through interactive simulation. RAG is explained with respect to it is usage in resource allocation to processes maintained by the operating system
           </p>
         </div>
       </div>
@@ -391,7 +391,7 @@
               <p>6.<span class="bolder">Assignment Edge Creation:</span> First right-click (long press for mobiles) on any Resource-Instance and then right-click (long press for mobiles) on any Process. This will create an assignment edge(Blue color) from that Resource-Instance to that Process.(<span class="bolder">Note:</span> a single resource-instance can’t be assigned to two different Processes)</p>
               <p><span class="bolder">Note: Use Long Press for Right-click on mobile devices.</span></p>
               <p>7.<span class="bolder">Requesting Edge Creation:</span> First right-click (long press for mobiles) on any Process and then right-click (long press for mobiles) on any Resource-Instance, this will create a Requesting edge from that Process to that Resource-Instance.(<span class="bolder">Note:</span> a single Process can’t  request two different Resource-Instances of a single Resource)</p>
-              <p>8.<span class="bolder">Assignment/Requesting Edge deletion:</span> whether it is Assignment or requesting edge, to delete it  right click (long press for mobiles) on its tail Process/Resource-Instance and then right-click (long press for mobiles) on its head Process/resource-Instance.</p>
+              <p>8.<span class="bolder">Assignment/Requesting Edge deletion:</span> whether it is Assignment or requesting edge, to delete it  right click (long press for mobiles) on it is tail Process/Resource-Instance and then right-click (long press for mobiles) on it is head Process/resource-Instance.</p>
              -->
               <!-- <h1>Instructions to Use</h1>
 
@@ -409,7 +409,7 @@
 
 <p>7. <span class="bolder">Requesting Edge Creation:</span> First, right-click (or long-press) on any process, and then right-click (or long-press) on any resource instance. This will create a requesting edge of red color, from that process to the resource instance. (<span class="bolder">Note:</span> A single process cannot request two different resource instances of the same resource.)</p>
 
-<p>8. <span class="bolder">Assignment/Requesting Edge Deletion:</span> To delete an edge (whether assignment or requesting), right-click (or long-press) on its tail process/resource instance and then right-click (or long-press) on its head process/resource instance.</p>
+<p>8. <span class="bolder">Assignment/Requesting Edge Deletion:</span> To delete an edge (whether assignment or requesting), right-click (or long-press) on it is tail process/resource instance and then right-click (or long-press) on it is head process/resource instance.</p>
 
 <p><span class="bolder">Note:</span> Use <span class="bolder">long-press</span> instead of right-click on mobile devices.</p> -->
 
@@ -429,15 +429,15 @@
 
 <p>7. <span class="bolder">Requesting Edge Creation:</span> First, right-click (or long-press) on any process, and then right-click (or long-press) on any resource instance. This will create a requesting edge (red in color) from that process to the resource instance. (<span class="bolder">Note:</span> A single process cannot request two different resource instances of the same resource.)</p>
 
-<p>8. <span class="bolder">Assignment/Requesting Edge Deletion:</span> To delete an edge (either assignment or requesting), right-click (or long-press) on its tail process/resource instance and then right-click (or long-press) on its head process/resource instance.</p>
+<p>8. <span class="bolder">Assignment/Requesting Edge Deletion:</span> To delete an edge (either assignment or requesting), right-click (or long-press) on it is tail process/resource instance and then right-click (or long-press) on it is head process/resource instance.</p>
 
 <p><span class="bolder">Note:</span> Use <span class="bolder">long-press</span> instead of right-click on mobile devices.</p>
 
               <h1>Button functionalities</h1>
               <!-- <p>All the buttons provided below the graph simulation are used for the following functionalities.</p> -->
-              <!-- <p>Click on any button to use its functionality.</p> -->
+              <!-- <p>Click on any button to use it is functionality.</p> -->
               <p> Following buttons are provided for 
-graph simulation ( Click on any button to see its functionality)</p>
+graph simulation ( Click on any button to see it is functionality)</p>
               <p>1.<span class="bolder">Add Processes:</span> Use to  add “n” number of processes into the  graph.</p>
               <p>2.<span class="bolder">Add Resources:</span> Use to add “r” number of resources with each having minimum “s” number of resource-instances.</p>
               <p>3.<span class="bolder">Add Resource-Instance:</span> Use this button to add 1 more Resource-Instance in any existing resource.</p>
@@ -452,7 +452,7 @@ graph simulation ( Click on any button to see its functionality)</p>
             </div>
             <!-- Extra forms  -->
             <div class="input" id="input_process">
-            <!-- ADD PROCESS --> <!-- Working OF THIS DIV the class ="input" is of display:none therefore the form is not visible in default So this form is being initialised at each window run  with prevented value by calling setupForm() at each when user clicks on "Add Processes" it calls "Visible_Process()" "addProcess()" chnages the class of this div to "input_visible" which makes the form to visible of window id = "input_process" is used to style this div        when user enters a value in form it calls "addNode(value)" function to add Process to graph on submit or Press Enter when user click on Cancel with using its id "cancel-button" a code is runned in the form which resets the form and  chnages the form's class to "input" which is in defult "display:none" -->
+            <!-- ADD PROCESS --> <!-- Working OF THIS DIV the class ="input" is of display:none therefore the form is not visible in default So this form is being initialised at each window run  with prevented value by calling setupForm() at each when user clicks on "Add Processes" it calls "Visible_Process()" "addProcess()" chnages the class of this div to "input_visible" which makes the form to visible of window id = "input_process" is used to style this div        when user enters a value in form it calls "addNode(value)" function to add Process to graph on submit or Press Enter when user click on Cancel with using it is id "cancel-button" a code is runned in the form which resets the form and  chnages the form's class to "input" which is in defult "display:none" -->
               <p>How many Processes, you want to add in the graph ?</p>
               <form id="process-form">
                   <label for="input-for-process"></label>
