chore: removed accidental double quotation from references

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ graph simulation ( Click on any button to see it is functionality)</p>
           <ul class="ref-list">
             <li>[1] Mike Bostock. D3.js: Data-Driven Documents. 2025. Available at:  <a target="_blank" href="https://d3js.org/">https://d3js.org/ </a></li>
             <li>[2] Mike Bostock. D3-force: Force-Directed Graph Layout. 2025. Available at: <a target="_blank" href="https://github.com/d3/d3-force">https://github.com/d3/d3-force</a></li>
-            <li>[3] Deadlock,” CS 341: System Programming Coursebook, University of Illinois. Available at:  <a target="_blank" href="https://cs341.cs.illinois.edu/coursebook/Deadlock">https://cs341.cs.illinois.edu/coursebook/Deadlock</a></li>
+            <li>[3] Deadlock, CS 341: System Programming Coursebook, University of Illinois. Available at:  <a target="_blank" href="https://cs341.cs.illinois.edu/coursebook/Deadlock">https://cs341.cs.illinois.edu/coursebook/Deadlock</a></li>
             <li>[4] Silberschatz, A., Galvin, P. B., & Gagne, G. (2009). Chapter 7: Deadlocks. In Operating System Concepts with Java (8th ed.). University of Tennessee at Chattanooga. Availabe at <a target="_blank" href="https://www.utc.edu/sites/default/files/2021-04/2800-lecture7-deadlocks.pdf">https://www.utc.edu/sites/default/files/2021-04/2800-lecture7-deadlocks.pdf</a></li>
           </ul>
         </div> 
