--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <li>To add an assignment edge, right-click on a resource icon, then right-click on the process that holds it.</li>
               </ul>
               <br>
-              <li><span>Find Deadlock in the Given Graph:</span></li><br>
+              <li><span>Find Deadlock in the given Graph:</span></li><br>
                 <p>Check for the following conditions to find potential deadlock:</p><br>
                 <ol style="list-style-type: upper-roman;">
                   <li><strong>Hold and Wait:</strong> For each process, check if it is holding a resource while requesting same instance or another resource that is currently held. If true, the edge is highlighted in yellow. (toggle 'view hold & wait')</li>
