--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
 <p>2. <span class="bolder">Resource:</span> Each resource is represented by a gray-colored rectangle box containing one or more resource instances, represented by orange-colored rectangles. A resource must have at least one resource instance.</p>
 
-<p>3. <span class="bolder">Resource Instance:</span> Each resource instance is represented by an orange rectangle box and is numbered as Rm.n, where ‘m’ denotes the resource number and ‘n’ denotes the instance number within that resource. For example: R1.1, R1.2, R2.1, R3.1, R3.3, R5.4.</p>
+<p>3. <span class="bolder">Resource Instance:</span> Each resource instance is represented by an orange-colored rectangle box and is numbered as Rm.n, where ‘m’ denotes the resource number and ‘n’ denotes the instance number within that resource. For example: R1.1, R1.2, R2.1, R3.1, R3.3, R5.4.</p>
 
 <p>4. <span class="bolder">Selection:</span> Right-click (or long-press on mobile devices) on any process or resource instance to select it. The selected item will have a green boundary. To deselect, right-click (or long-press) again.</p>
 
