--- a/index.html
+++ b/index.html
@@ -415,11 +415,11 @@
 
               <h1>Instructions to Use</h1>
 
-<p>1. <span class="bolder">Process:</span> Process nodes are represented by blue-colored circles and numbered as P1, P2, P3, ..., Pn if the graph has ‘n’ processes.</p>
+<p>1. <span class="bolder">Process:</span> Process nodes are represented by blue-colored circles and are numbered as P1, P2, P3, ..., Pn if the graph has ‘n’ processes.</p>
 
 <p>2. <span class="bolder">Resource:</span> Each resource is represented by a gray-colored rectangle box containing one or more resource instances, represented by orange-colored rectangles. A resource must have at least one resource instance.</p>
 
-<p>3. <span class="bolder">Resource Instance:</span> Each resource instance is represented by an orange-colored rectangle box and is numbered as Rm.n, where ‘m’ denotes the resource number and ‘n’ denotes the instance number within that resource. For example: R1.1, R1.2, R2.1, R3.1, R3.3, R5.4.</p>
+<p>3. <span class="bolder">Resource Instance:</span> Each resource instance is represented by an orange-colored rectangle box and is numbered as Rm.n, where ‘m’ denotes the resource number and ‘n’ denotes the instance number within that resource. For example: R1.1, R1.2 ; R2.1, R2.2</p>
 
 <p>4. <span class="bolder">Selection:</span> Right-click (or long-press on mobile devices) on any process or resource instance to select it. The selected item will have a green boundary. To deselect, right-click (or long-press) again.</p>
 
@@ -440,12 +440,12 @@
 graph simulation ( Click on any button to see it is functionality)</p>
               <p>1.<span class="bolder">Add Processes:</span> Use to  add “n” number of processes into the  graph.</p>
               <p>2.<span class="bolder">Add Resources:</span> Use to add “r” number of resources with each having minimum “s” number of resource-instances.</p>
-              <p>3.<span class="bolder">Add Resource-Instance:</span> Use this button to add 1 more Resource-Instance in any existing resource.</p>
-              <p>4.<span class="bolder">View Hold-wait:</span> Activate the Visualisation of Hold-wait condition in the graph. The edges in hold-wait condition will then be highlighted by yellow color.</p>
-              <p>5.<span class="bolder">View Circular-wait:</span> Activate the Visualisation of Circular-wait condition in the graph. The edges in circular-wait will then be highlighted by green color.</p>
+              <p>3.<span class="bolder">Add Resource-Instance:</span> Use this button to add 1 more Resource-Instance to any of the existing resource.</p>
+              <p>4.<span class="bolder">View Hold-wait:</span> Activate the Visualisation of Hold-wait condition in the graph. The edges in hold-wait condition will then be highlighted with yellow color.</p>
+              <p>5.<span class="bolder">View Circular-wait:</span> Activate the Visualisation of Circular-wait condition in the graph. The edges in circular-wait will then be highlighted with green color.</p>
               <p>6.<span class="bolder">Delete:</span> Activate deletion mode, after this right-click(long press for mobiles) on any Process or Resource-Instance to delete it.</p>
               <p>7.<span class="bolder">Reset:</span> Make the graph simulation empty or to delete everything.</p>
-              <p>8.<span class="bolder">Edge Creation/ Edge Deletion: </span>Use to read instructions for creating or deleting edges.</p>
+              <p>8.<span class="bolder">Edge Creation/ Edge Deletion: </span>Use to read instructions to create or delete edges.(Both of these buttons do not toggle any functionality.)</p>
               <!-- <p><span class="bolder">Note:</span> Buttons having activation can be deactivated if  again left-click (simple click for mobiles) on the button.</p> -->
               <p><span class="bolder">Note:</span> Buttons having activation can be deactivated if again left-click (simple click for mobiles) on the button. Activated  button is deactivated on left-click (simple click for mobiles).</p>
 
